--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CaseDocuments.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CaseDocuments.cshtml
@@ -13,7 +13,7 @@
             <div style="display: flex; gap: 10px; align-items: center;">
                 <!-- Download Link -->
                 <a href="@downloadLink" target="_blank" title="Download File">
-                    <i class="fa fa-file-archive-o" style="font-size: 18px;"></i>
+                    <i class="fas fa-file-archive" aria-hidden="true"></i> <!-- FA 6 -->
                 </a>
 
                 <!-- Delete Icon (only for 'self') -->
