--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_ViewAll.cshtml
@@ -1,5 +1,4 @@
-﻿@* @model IEnumerable<ProceedingSubHeadViewModel> *@
-    @model PaginationViewModel<ProceedingSubHeadViewModel>
+﻿@model PaginationViewModel<ProceedingSubHeadViewModel>
 <table id="tblProceedingSHead" class="table table-striped" width="100%" cellspacing="0">
     <thead>
         <tr>
@@ -7,7 +6,7 @@
             <th>Name(En)</th>
             <th>Name(Hn)</th>
             @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingSubHeads.Delete)).Result.Succeeded
-            || (AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingSubHeads.Edit)).Result.Succeeded)
+                        || (AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingSubHeads.Edit)).Result.Succeeded)
             {
                 <th>Actions</th>
             }
@@ -27,7 +26,7 @@
                     @bt.Name_Hn
                 </td>
                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingSubHeads.Delete)).Result.Succeeded ||
-               (AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingSubHeads.Edit)).Result.Succeeded)
+                            (AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingSubHeads.Edit)).Result.Succeeded)
                 {
                     <td text-right">
                         <div class="btn-group">
@@ -58,35 +57,13 @@
     </tbody>
 
 </table>
-@* <nav>
-    <ul class="pagination">
-        @for (int i = 1; i <= Model.TotalPages; i++)
-        {
-            <li class="page-item @(i == Model.PageNumber ? "active" : "")">
-                <a class="page-link" href="@Url.Action("LoadAll", new { pageNumber = i, pageSize = Model.PageSize })">@i</a>
-            </li>
-        }
-    </ul>
-</nav> *@
 <script>
-    // $(document).ready(function () {
-    //     $("#tblProceedingSHead").DataTable();
-    // });
-    //     $(document).on('click', '.pagination a', function (event) {
-    //     event.preventDefault();
-    //     var url = $(this).attr('href');
-    //     $.get(url, function (data) {
-    //         $('#tblProceedingSHead').html($(data).find('#tblProceedingSHead').html());
-    //         $('.pagination').html($(data).find('.pagination').html());
-    //     });
-    // });
         $(document).ready(function () {
-            debugger;
         $("#tblProceedingSHead").DataTable({
-            "processing": false,
+            "processing": true,
             "serverSide": true,
             "ajax": {
-                "url": "/LawyerDiary/ProceedingSubHead/LoadAll", // Your server-side endpoint
+                "url": "/LawyerDiary/ProceedingSubHead/LoadAll", 
                 "type": "POST"
             },
             "columns": [
