--- a/CourtApp.Web/Areas/_ViewImports.cshtml
+++ b/CourtApp.Web/Areas/_ViewImports.cshtml
@@ -14,6 +14,7 @@
 @using CourtApp.Web.Areas.Report.Models
 @using CourtApp.Web.Areas.Drafting.Models
 @using CourtApp.Web.Areas.Admin.Models
+@using CourtApp.Web.Areas.Dashboard.Models
 @inject IAuthorizationService AuthorizationService
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
